<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>

	<LinearLayout
		android:orientation="vertical" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>

		<ImageView 
			android:src="@drawable/logo"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:padding="10dp" 
			/>


		<LinearLayout 
			android:orientation="vertical"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:background="@drawable/background" 
			android:padding="10dp" android:layout_gravity="center">

			<LinearLayout 
				android:orientation="horizontal"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:paddingLeft="0dp" 
				android:paddingRight="0dp"
				android:paddingBottom="20dp" android:layout_gravity="center_horizontal">

				<ImageView 
					android:id="@+id/statusIcon"
					android:src="@drawable/apn_status_1" 
					android:layout_height="wrap_content"
					android:layout_width="wrap_content" 
					android:paddingRight="10dp"
					/>
					
				<LinearLayout 
					android:orientation="vertical"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
				>
					<TextView 
						android:text="@string/status"
						android:layout_height="wrap_content"
						android:textSize="20dp"
						android:textStyle="bold"
						android:layout_width="wrap_content" />
						
					<TextView 
						android:id="@+id/statusInfo"
						android:text="@string/status_1"
						android:layout_height="wrap_content"
						android:textSize="18dp"
						android:textStyle="bold"
						android:layout_width="wrap_content"/>
						
				</LinearLayout>
				
					
				
					
			</LinearLayout>
			
			<TextView 
				android:id="@+id/infoText" 
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" 
				android:textColor="#ffb621"
				android:paddingBottom="10dp"
				/>
			

			<LinearLayout 
				android:orientation="vertical"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:paddingLeft="20dp" 
				android:paddingRight="20dp"
				>


				<Button 
					android:id="@+id/addButton" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true" 
					android:text="@string/add_giffgaff"
					android:onClick="addButtonOnClick" 
					/>

				<Button 
					android:id="@+id/setAsDefaultButton"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true" 
					android:text="@string/apply_giffgaff"
					android:onClick="setDefaultOnClick" 
					/>

				<Button 
					android:id="@+id/deleteOtherButton"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true" 
					android:text="@string/delete_others"
					android:onClick="deleteOthersButtonOnClick" 
					/>

				<Button 
					android:id="@+id/deleteButton" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true" 
					android:text="@string/delete_giffgaff"
					android:onClick="deleteButtonOnClick" 
					/>

				<Button 
					android:id="@+id/showAPNSButton"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true" 
					android:text="@string/show_apns"
					android:onClick="showAPNSButtonOnClick" 
					/>
					
			</LinearLayout>
			
			<TextView 
				android:id="@+id/widgetText" 
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" 
				android:textColor="#ffb621"
				android:text="@string/widget_info"
				android:paddingTop="30dp"
				
				/>
				
			
			
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
